--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # ===============================
 # DATASOURCE
 # ===============================
-server.port=8082
+server.port=8081
 #Connection url for the database "nal_hrm"
 spring.datasource.url = jdbc:mysql://localhost:3306/nal_hrm?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 
@@ -32,3 +32,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl = true
 spring.thymeleaf.cache=false
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+
+logging.level.nals: debug
+
+logging.level.org.springframework.web: INFO
+logging.level.org.hibernate: ERROR
