--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 # ===============================
 # DATASOURCE
 # ===============================
-server.port=8081
+#server.port=8081
 #Connection url for the database "nal_hrm"
-spring.datasource.url = jdbc:mysql://localhost:3306/nal_hrm?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url = jdbc:mysql://nalstest.cojf3ywjf3so.us-east-2.rds.amazonaws.com:3306/nal_hrm?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 
 #MySQL username and password
-spring.datasource.username=root
-spring.datasource.password=1
+spring.datasource.username=nalstest_user
+spring.datasource.password=nalstest_password
 
 #Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.dbcp.test-while-idle=true
