--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@
 # ===============================
 #server.port=8081
 #Connection url for the database "nal_hrm"
-spring.datasource.url = jdbc:mysql://nalstest.cojf3ywjf3so.us-east-2.rds.amazonaws.com:3306/nal_hrm?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=@db.connectionURL@
 
 #MySQL username and password
-spring.datasource.username=nalstest_user
-spring.datasource.password=nalstest_password
+spring.datasource.username=@db.username@
+spring.datasource.password=@db.password@
 
 #Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.dbcp.test-while-idle=true
@@ -37,3 +37,5 @@ spring.jpa.open-in-view=false
 logging.level.nals: debug
 logging.level.org.springframework.web: INFO
 logging.level.org.hibernate: ERROR
+
+server.port=${PORT:8080}
