--- a/pom.xml
+++ b/pom.xml
@@ -133,8 +133,8 @@
                 <db.connectionURL>
                     jdbc:mysql://localhost:3306/nal_hrm?autoReconnect=true&amp;useSSL=false&amp;useUnicode=yes&amp;characterEncoding=UTF-8
                 </db.connectionURL>
-                <db.username>nalstest_user</db.username>
-                <db.password>nalstest_password</db.password>
+                <db.username>root</db.username>
+                <db.password>root</db.password>
             </properties>
         </profile>
         <profile>
@@ -160,7 +160,7 @@
                         <groupId>com.heroku.sdk</groupId>
                         <artifactId>heroku-maven-plugin</artifactId>
                         <configuration>
-                            <appName>hrm-app-staging</appName>
+                            <appName>hrm-testing</appName>
                             <includeTarget>false</includeTarget>
                             <includes>
                                 <include>target/${project.build.finalName}.jar</include>
