--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         
     </dependencies>
 
@@ -143,43 +149,5 @@
                 <db.password>root</db.password>
             </properties>
         </profile>
-        <!--<profile>-->
-            <!--<id>staging</id>-->
-            <!--&lt;!&ndash;<properties>&ndash;&gt;-->
-                <!--&lt;!&ndash;<db.connectionURL>&ndash;&gt;-->
-                    <!--&lt;!&ndash;jdbc:mysql://eu-cdbr-west-02.cleardb.net:3306/heroku_7eec86fe3e615e4?autoReconnect=true&amp;useSSL=false&amp;useUnicode=yes&amp;characterEncoding=UTF-8&ndash;&gt;-->
-                <!--&lt;!&ndash;</db.connectionURL>&ndash;&gt;-->
-                <!--&lt;!&ndash;<db.username>b9c7e30cbea604</db.username>&ndash;&gt;-->
-                <!--&lt;!&ndash;<db.password>d4223919</db.password>&ndash;&gt;-->
-            <!--&lt;!&ndash;</properties>&ndash;&gt;-->
-
-            <!--<properties>-->
-                <!--<db.connectionURL>-->
-                    <!--jdbc:mysql://nalstest.cojf3ywjf3so.us-east-2.rds.amazonaws.com:3306/nal_hrm?autoReconnect=true&amp;useSSL=false&amp;useUnicode=yes&amp;characterEncoding=UTF-8-->
-                <!--</db.connectionURL>-->
-                <!--<db.username>nalstest_user</db.username>-->
-                <!--<db.password>nalstest_password</db.password>-->
-            <!--</properties>-->
-            <!--<build>-->
-                <!--<plugins>-->
-                    <!--<plugin>-->
-                        <!--<groupId>com.heroku.sdk</groupId>-->
-                        <!--<artifactId>heroku-maven-plugin</artifactId>-->
-                        <!--<configuration>-->
-                            <!--<appName>hrm-testing</appName>-->
-                            <!--<includeTarget>false</includeTarget>-->
-                            <!--<includes>-->
-                                <!--<include>target/${project.build.finalName}.jar</include>-->
-                            <!--</includes>-->
-                            <!--<jdkVersion>${java.version}</jdkVersion>-->
-                            <!--<processTypes>-->
-                                <!--<web>java $JAVA_OPTS -jar target/${project.build.finalName}.jar-->
-                                <!--</web>-->
-                            <!--</processTypes>-->
-                        <!--</configuration>-->
-                    <!--</plugin>-->
-                <!--</plugins>-->
-            <!--</build>-->
-        <!--</profile>-->
     </profiles>
 </project>
