--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,14 @@ logging.level.org.springframework.web: INFO
 logging.level.org.hibernate: ERROR
 
 server.port=${PORT:8080}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=release@nal.vn
+spring.mail.password=nalnal123
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
