[add] update to deploy tomcat

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>nals.hrm</groupId>
     <artifactId>api_nals_hrm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>api_nals_hrm</name>
     <description>API NALs HRM</description>
@@ -93,6 +93,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
         
     </dependencies>
