final format send email

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <artifactId>api_nals_hrm</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <!--<packaging>war</packaging>-->
 
     <name>api_nals_hrm</name>
     <description>API NALs HRM</description>
@@ -97,10 +98,10 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
 
-        
     </dependencies>
 
     <build>
