--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=7000
 spring.mail.properties.mail.smtp.timeout=7000
 spring.mail.properties.mail.smtp.writetimeout=7000
+
+
+server.jetty.accesslog.time-zone=GMT+7
+#spring.jackson.time-zone=GMT+7
